# neomath

./: Cargo.toml  README.md  test_workspace.sh
geo-glam-interop/: Cargo.toml  README.md
geo-glam-interop/src/: glam_alias.rs  lib.rs
licenses/: LICENSE-APACHE  LICENSE-MIT  LICENSE_METABUILD
neo-aabb/: Cargo.toml
neo-aabb/src/d2/: conversion.rs  def.rs  impls.rs  mod.rs  properties.rs
neo-aabb/src/d3/: def.rs  impls.rs  mod.rs
neo-boolops/: Cargo.toml
neo-boolops/src/: ops.rs  shared_poly_lines.rs
neo-boolops/src/mesh_ops/: difference_mesh.rs
neo-bounded/: Cargo.toml
neo-bounded/src/: aabb2d.rs  aabb3d.rs  float_ord.rs  geo_polygon.rs  lib.rs  line2d.rs  line3d.rs  polygon3d.rs  surface.rs  traits.rs
neo-coordinate-system/: Cargo.toml
neo-coordinate-system/src/: lib.rs
neo-float/: Cargo.toml
neo-float/src/: lib.rs  neo_float.rs
neo-geo-boolops/: Cargo.toml  diff.html  inter.html
neo-geo-boolops/src/: lib.rs  ops.rs  shared_poly_lines.rs  snap.rs  unify_mesh.rs
neo-geo-boolops/src/mesh_ops/: intersect_mesh.rs  mod.rs  union_mesh.rs
neo-geo-glam-interop/: Cargo.toml
neo-geo-glam-interop/src/: lib.rs  neo_float.rs  to_geo.rs  to_glam.rs
neo-intersection/: Cargo.toml
neo-intersection/src/: lib.rs  line_intersection_parts.rs  results.rs  trait_def.rs
neo-intersection/src/coord_sys/: coord_sys.rs  mod.rs  other_coord_sys.rs  ray.rs
neo-intersection/src/line2d/: line.rs  mod.rs  polygon.rs  ray.rs
neo-intersection/src/line3d/: line.rs
neo-intersection/src/plane/: mod.rs  other_plane.rs
neo-intersection/src/ray2d/: aabb.rs  line.rs  mod.rs  polygon.rs  ray.rs
neo-intersection/src/ray3d/: coord_sys.rs  ray.rs
neo-intersection/src/surface/: coord_sys.rs  mod.rs  other_surface.rs  plane.rs  ray.rs  surface.rs
neo-line-segment/: Cargo.toml
neo-line-segment/src/d2/: aabb.rs  constants.rs  constructor.rs  conversion.rs  def.rs  intersection.rs  mod.rs  operation.rs  predicates.rs  projection.rs  properties.rs  rotation.rs  splitting.rs
neo-line-segment/src/d3/: aabb.rs  constants.rs  constructor.rs  conversion.rs  def.rs  mod.rs  operation.rs  predicates.rs  projection.rs  properties.rs  rotation.rs  splitting.rs
neo-plane/: Cargo.toml
neo-plane/src/: lib.rs
neo-ray/: Cargo.toml
neo-ray/src/d2/: constants.rs  constructor.rs  conversion.rs  def.rs  intersection.rs  mod.rs  operations.rs  predicates.rs  projection.rs  properties.rs  rotation.rs
neo-ray/src/d3/: constants.rs  constructor.rs  conversion.rs  def.rs  mod.rs  operations.rs  predicates.rs  projection.rs  properties.rs  rotation.rs
neo-ray/src/d3/intersection/: mod.rs  plane.rs  ray.rs
neo-surface/: Cargo.toml
neo-surface/src/: constructor.rs  def.rs  injection.rs  lib.rs  predicates.rs  projection.rs  properties.rs
neo-surface/src/polygon3d/: aabb.rs  constructor.rs  def.rs  mod.rs  properties.rs
neo-surface/src/surface/: aabb.rs  boolops.rs  constructor.rs  def.rs  injection.rs  mod.rs  operation.rs  predicates.rs  projection.rs  properties.rs  rotation.rs  triangulate.rs  union.rs
neo-tessellation/: Cargo.toml
neo-tessellation/src/: add_custom_vertex.rs  helper.rs  lib.rs  simple.rs  unconstrained.rs  with_attributes.rs  with_constraints.rs  with_subdivision.rs
neo-tessellation/src/def/: geo_spade.rs  mod.rs  vertex_private.rs  vertex_pub.rs
neo-utils/: Cargo.toml
neo-utils/src/: lib.rs
neomath/: Cargo.toml
neomath/src/: lib.rs
round-boolop/: Cargo.toml  README.md
round-boolop/faildata/: difference-213337.html-raw-data  difference-231507.html-raw-data  difference-236437.html-raw-data  intersection-174307.html-raw-data  union-471075.html-raw-data
round-boolop/src/: lib.rs
round-boolop/tests/: vanilla.rs
round-num/: Cargo.toml
round-num/src/: lib.rs  marker.rs  round.rs
round-num/src/round_float/: alias.rs  def.rs  impls.rs  mod.rs
round-num/src/round_float/trait_impls/: float_next_after.rs  geo.rs  mod.rs  num.rs  ops.rs
round-num/src/traits/: def.rs  impls.rs
