[workspace]
resolver = "2"

members = [
  "neo-aabb",
  "neo-bounded",
  "neo-coordinate-system",
  "neo-geo-glam-interop",
  "neo-intersection",
  "neo-line-segment",
  "neo-plane",
  "neo-ray",
  "neo-surface",
  "neo-utils",

  "neomath",
]

[workspace.dependencies]
# needed
geo = { version = "0.27.0", features = ["use-serde"] }
glam = { version = "0.24.2", features = ["serde"] }
spade = "2.4.1"
serde = { version = "1.0.193", features = ["derive"] }

neomath = { path = "neomath" }

# workspace crates
neo-aabb = { path = "neo-aabb" }
neo-bounded = { path = "neo-bounded" }
neo-coordinate-system = { path = "neo-coordinate-system" }
neo-geo-glam-interop = { path = "neo-geo-glam-interop" }
neo-intersection = { path = "neo-intersection" }
neo-line-segment = { path = "neo-line-segment" }
neo-plane = { path = "neo-plane" }
neo-ray = { path = "neo-ray" }
neo-surface = { path = "neo-surface" }
neo-utils = { path = "neo-utils" }

# dev
rand = "0.8.5"
serde_json = "1.0.108"

[patch.crates-io]
geo = { git = "https://github.com/RobWalt/geo", branch = "feat/spade-boolops" }
