[package]
name = "neo-geo-boolops"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geo.workspace = true
neo-float.workspace = true
rand = { workspace = true, optional = true }

[dev-dependencies]
rand.workspace = true
serde_json.workspace = true
geo-svg.workspace = true

[features]
random-retry = ["rand"]
