[package]
name = "neo-line-segment"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geo.workspace = true
glam = { workspace = true, features = ["approx"]}
serde.workspace = true
neo-geo-glam-interop.workspace = true
neo-ray.workspace = true
neo-aabb.workspace = true
