[package]
name = "neo-surface"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geo.workspace = true
neo-geo-glam-interop.workspace = true
glam.workspace = true
neo-aabb.workspace = true
neo-coordinate-system.workspace = true
neo-line-segment.workspace = true
neo-plane.workspace = true
neo-ray.workspace = true
