[package]
name = "round-boolop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geo.workspace = true
round-num.workspace = true

[dev-dependencies]
geo = { workspace = true, features = ["serde"] }
geo-svg.workspace = true
paste.workspace = true
rand.workspace = true
serde_json.workspace = true
