[package]
name = "round-num"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
float_next_after = { workspace = true, optional = true}
geo = { workspace = true, optional = true }
num-traits = { workspace = true, optional = true }

[features]
default = ["with-num", "with-geo"]
with-num = ["num-traits"]
with-geo = ["geo", "float_next_after"]
